--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,3 +38,19 @@ add_executable(test_threadmanager
 )
 
 target_link_libraries(test_threadmanager PRIVATE Threads::Threads)
+
+# --- Banking Core ---
+add_library(bank_core
+  src/bank/Bank.cpp
+   src/bank/Ledger.cpp
+
+)
+target_include_directories(bank_core PUBLIC include)
+target_compile_features(bank_core PUBLIC cxx_std_17)
+target_link_libraries(bank_core PUBLIC pthread)
+
+# --- Bank Tests ---
+add_executable(test_bank
+  tests/bank/test_bank.cpp
+)
+target_link_libraries(test_bank PRIVATE bank_core)
